# temp-humidity-station

./: README.md  build-docs.nix  build-docs.sh  compress-jpgs.sh  shell.nix
docs/: build-docs.nix  build-docs.sh  compress-jpgs.sh  notes.md  project-presentation.md  project-presentation_02-06-2024.html  project-presentation_06-06-2024.html  project-presentation_12-06-2024.html  project-presentation_14-05-2024.html  project-presentation_27-05-2024.html
examples/hello_usb/: CMakeLists.txt  shell.nix
examples/picow_blink/: CMakeLists.txt  shell.nix
hello_usb/: CMakeLists.txt  hello_usb.c  picow-build.sh  shell.nix
picow_blink/: .gitignore  picow-build.sh  shell.nix
